--- a/src/components/WeatherDetail/components/CurrentWeather/CurrentWeather.module.scss
+++ b/src/components/WeatherDetail/components/CurrentWeather/CurrentWeather.module.scss
@@ -55,20 +55,20 @@
   .description {
     font-size: 1.2rem;
     font-weight: 500;
-    color: #555;
+    color: var(--text-quaternary);
     text-transform: capitalize;
     margin-bottom: 0.8rem;
   }
 
   .feelsLike {
     font-size: 1rem;
-    color: #777;
+    color: var(--text-tertiary);
     margin-bottom: 1rem;
   }
 
   .groundFrostWarning {
-    background-color: #e0f2f7;
-    color: #01658e;
+    background-color: var(--bg-info);
+    color: var(--text-info);
     padding: 0.3rem 0.8rem;
     border-radius: 1rem;
     font-size: 0.85rem;
@@ -90,7 +90,7 @@
     gap: 0.5rem 1.5rem;
     width: 100%;
     font-size: 0.95rem;
-    color: #555;
+    color: var(--text-quaternary);
     margin-bottom: 2rem;
 
     div {
@@ -113,16 +113,16 @@
 
 .cityDetails {
   flex: 1;
-  background-color: #f5f5f5;
+  background-color: var(--bg-light);
   padding: 1rem 1.5rem;
   border-radius: 8px;
   font-size: 0.95rem;
-  color: #333;
+  color: var(--text-primary);
 
   h3 {
     margin-bottom: 0.8rem;
     font-size: 1.2rem;
-    color: #1a202c;
+    color: var(--text-dark);
   }
 
   ul {
@@ -136,7 +136,7 @@
       justify-content: space-between;
 
       strong {
-        color: #555;
+        color: var(--text-quaternary);
         margin-right: 0.5rem;
       }
     }
