--- a/src/components/WeatherDetail/components/WeatherHeader/WeatherHeader.module.scss
+++ b/src/components/WeatherDetail/components/WeatherHeader/WeatherHeader.module.scss
@@ -5,7 +5,7 @@
   align-items: flex-end;
   margin-bottom: 1.5rem;
   padding-bottom: 1rem;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid var(--border-light);
 
   .backLink {
     display: inline-block;
@@ -23,7 +23,7 @@
 
     .date {
       font-size: 0.9rem;
-      color: #777;
+      color: var(--text-tertiary);
     }
     .city {
       font-size: 2.2rem;
@@ -35,9 +35,9 @@
 
   &__right {
     font-size: 0.85rem;
-    color: #666;
+    color: var(--text-secondary);
     a {
-      color: #007bff;
+      color: var(--link-color);
       text-decoration: none;
       &:hover {
         text-decoration: underline;
