--- a/src/components/WeatherCard/WeatherCard.module.scss
+++ b/src/components/WeatherCard/WeatherCard.module.scss
@@ -8,7 +8,7 @@
   border-radius: 1.2rem;
   padding: 1rem;
   border: 1px solid var(--card-border);
-  box-shadow: 0 0.6rem 1.8rem rgba(233, 43, 22, 0.197);
+  box-shadow: 0 0.6rem 1.8rem var(--shadow-accent);
   position: relative;
   cursor: pointer;
 }
