--- a/src/components/WeatherDetail/components/DailyForecast/DailyForecast.module.scss
+++ b/src/components/WeatherDetail/components/DailyForecast/DailyForecast.module.scss
@@ -10,7 +10,7 @@
     margin: 0;
     background-color: var(--forecast-bg);
     border-radius: 0.8rem;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 4px var(--shadow-subtle);
   }
   li {
     display: flex;
